--- a/account-compression/programs/spl-compression/Cargo.toml
+++ b/account-compression/programs/spl-compression/Cargo.toml
@@ -16,7 +16,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.25.0"
+anchor-lang = { git = "https://github.com/GenesysGo/anchor", branch = "tracy/test-validator-geyser-config-and-spl-version" }
 bytemuck = "1.8.0"
 spl-concurrent-merkle-tree = { path="../../../libraries/concurrent-merkle-tree", features = [ "sol-log" ]}
 wrapper = { path="../wrapper", features = [ "no-entrypoint" ]}
